ocean publish model weights as ipfs asset

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,11 @@
 # .env
 
-# general
+# web3
 INFURA_ID=
 PRIVATE_KEY_0=
 PRIVATE_KEY_1=
+
+# ipfs
+INFURA_IPFS_ID=
+INFURA_IPFS_KEY=
+IPFS_MODEL_HASH=
