--- a/environment.yml
+++ b/environment.yml
@@ -4,166 +4,40 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=5.1
-  - blas=1.0
-  - bzip2=1.0.8
-  - ca-certificates=2022.9.24
+  - bzip2
+  - ca-certificates
   - cudatoolkit=11.6.0
-  - ffmpeg=4.3
-  - freetype=2.10.4
-  - giflib=5.2.1
-  - gmp=6.2.1
-  - gnutls=3.6.13
-  - intel-openmp=2021.4.0
-  - jbig=2.1
-  - jpeg=9e
-  - lame=3.100
-  - lcms2=2.12
-  - ld_impl_linux-64=2.38
-  - lerc=2.2.1
-  - libdeflate=1.7
-  - libffi=3.3
-  - libgcc-ng=11.2.0
-  - libgomp=11.2.0
-  - libiconv=1.17
-  - libpng=1.6.37
-  - libstdcxx-ng=11.2.0
-  - libtiff=4.3.0
-  - libuuid=1.0.3
-  - libwebp=1.2.2
-  - libwebp-base=1.2.2
-  - lz4-c=1.9.3
-  - mkl=2021.4.0
-  - mkl_fft=1.3.1
-  - mkl_random=1.2.2
-  - ncurses=6.3
-  - nettle=3.6
-  - numpy-base=1.23.3
-  - openh264=2.1.1
-  - openssl=1.1.1q
-  - pycparser=2.21
-  - pysocks=1.7.1
-  - python=3.10.6
-  - python_abi=3.10
+  - pip
+  - python=3.10
   - pytorch=1.12.1
-  - pytorch-mutex=1.0
-  - readline=8.1.2
-  - requests=2.28.1
-  - six=1.16.0
-  - sqlite=3.39.3
-  - tk=8.6.12
-  - typing_extensions=4.4.0
-  - tzdata=2022e
-  - urllib3=1.26.11
-  - wheel=0.37.1
-  - xz=5.2.6
-  - zlib=1.2.12
-  - zstd=1.5.0
+  - pytorch-mutex
+  - readline
+  - requests
+  - six
+  - sqlite
+  - tk
+  - torchvision=0.13.1
+  - typing_extensions
+  - tzdata
+  - urllib3
+  - wheel
+  - xz
+  - zlib
+  - zstd
   - pip:
-    - aiohttp==3.8.1
-    - aiosignal==1.2.0
-    - asn1crypto==1.5.1
-    - asttokens==2.0.5
-    - async-timeout==4.0.2
-    - attrs==22.1.0
-    - base58==2.1.1
-    - bitarray==2.6.0
-    - black==22.6.0
-    - brotlipy==0.7.0
-    - certifi==2022.6.15
-    - cffi==1.15.1
-    - charset-normalizer==2.1.0
-    - click==8.1.3
-    - coincurve==15.0.1
-    - coloredlogs==15.0.1
-    - cryptography==3.3.2
-    - cytoolz==0.12.0
-    - dataclassy==0.11.1
-    - deprecated==1.2.13
-    - eciespy==0.3.11
-    - eip712==0.1.0
-    - enforce-typing==1.0.0.post1
-    - eth-abi==2.2.0
-    - eth-account==0.5.9
-    - eth-brownie==1.19.1
-    - eth-event==1.2.3
-    - eth-hash==0.3.3
-    - eth-keyfile==0.5.1
-    - eth-keys==0.3.4
-    - eth-rlp==0.2.1
-    - eth-typing==2.3.0
-    - eth-utils==1.10.0
-    - execnet==1.9.0
-    - frozenlist==1.3.1
-    - hexbytes==0.2.2
-    - humanfriendly==10.0
-    - hypothesis==6.27.3
-    - idna==3.3
-    - inflection==0.5.0
-    - iniconfig==1.1.1
-    - ipfshttpclient==0.8.0a2
-    - json-sempai==0.4.0
-    - jsonschema==3.2.0
-    - lazy-object-proxy==1.7.1
-    - lru-dict==1.1.8
-    - mkl-fft==1.3.1
-    - mkl-random==1.2.2
-    - mkl-service==2.4.0
-    - multiaddr==0.0.9
-    - multidict==6.0.2
-    - mypy-extensions==0.4.3
-    - mythx-models==1.9.1
-    - netaddr==0.8.0
-    - numpy==1.23.3
+    - eth-brownie~=1.19.1
+    - mypy-extensions
+    - numpy
     - ocean-contracts==1.1.7
     - ocean-lib==2.0.0a2
-    - packaging==21.3
-    - parsimonious==0.8.1
-    - pathspec==0.9.0
-    - pillow==9.2.0
-    - pip==22.2.2
-    - platformdirs==2.5.2
-    - pluggy==1.0.0
-    - prompt-toolkit==3.0.30
-    - protobuf==3.20.1
-    - psutil==5.9.1
-    - py==1.11.0
-    - py-solc-ast==1.2.9
-    - py-solc-x==1.1.1
-    - pycryptodome==3.15.0
-    - pycryptodomex==3.15.0
-    - pygments==2.12.0
-    - pygments-lexer-solidity==0.7.0
-    - pyjwt==1.7.1
-    - pyopenssl==21.0.0
-    - pyparsing==3.0.9
-    - pyrsistent==0.18.1
-    - pytest==6.2.5
-    - pytest-forked==1.4.0
-    - pytest-xdist==1.34.0
-    - python-dateutil==2.8.1
-    - python-dotenv==0.16.0
-    - pythx==1.6.1
-    - pytz==2022.6
-    - pyyaml==5.4.1
-    - rlp==2.0.1
-    - scipy==1.9.3
-    - semantic-version==2.8.5
-    - setuptools==63.4.1
-    - sortedcontainers==2.4.0
-    - toml==0.10.2
-    - tomli==2.0.1
-    - toolz==0.12.0
-    - torch==1.12.1
-    - torchvision==0.13.1
-    - tqdm==4.64.0
-    - varint==1.0.2
-    - vvm==0.1.0
-    - vyper==0.3.6
-    - wcwidth==0.2.5
-    - web3==5.30.0
-    - websockets==9.1
-    - wrapt==1.14.1
-    - yarl==1.8.1
+    - packaging
+    - pillow
+    - pytest
+    - python-dateutil
+    - python-dotenv
+    - scipy
+    - setuptools
+    - tqdm
+    - vyper
+    - web3
 prefix: /home/devin/miniconda3/envs/ml-web3-deployment
