--- a/etc/requirements/environment-golem.yml
+++ b/etc/requirements/environment-golem.yml
@@ -1,4 +1,4 @@
-name: mlweb3
+name: mlweb3-golem
 channels:
   - pytorch
   - conda-forge
@@ -26,4 +26,6 @@ dependencies:
   - zstd
   - pip:
     - python-dotenv
-prefix: /home/devin/miniconda3/envs/mlweb3
+    # ---- golem ----
+    - yapapi~=0.12.0
+prefix: /home/devin/miniconda3/envs/mlweb3-golem
