mnist classifier service on golem

--- a/etc/requirements/environment-golem.yml
+++ b/etc/requirements/environment-golem.yml
@@ -28,5 +28,6 @@ dependencies:
     - python-dotenv
     # ---- golem ----
     - flask~=3.0.1
+    - gvmkit-build
     - yapapi~=0.12.0
 prefix: /home/devin/miniconda3/envs/mlweb3-golem
